--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -403,7 +403,9 @@
     <Content Include="Images\MicrosoftEdge.scale-200.png" />
     <Content Include="Images\MicrosoftEdge.scale-400.png" />
     <Content Include="Images\MicrosoftEdge.scale-100.png" />
-    <Content Include="Properties\Default.rd.xml" />
+    <Content Include="Properties\Default.rd.xml">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -653,13 +655,13 @@
       <Version>2.2.0</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Converters">
-      <Version>2.2.3</Version>
+      <Version>2.2.4</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Helpers.Universal">
-      <Version>1.3.1</Version>
+      <Version>1.3.2</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.MvvmUniverse">
-      <Version>2.4.6</Version>
+      <Version>2.4.8</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.ResourceGenerator">
       <Version>1.3.3</Version>
