use mvvmpage every where; fix fucus bug of GalleyPage
Former-commit-id: d835c2fc45bdef07023051626114895b2310cadf [formerly e7e423101b1bd8c52f3766f5d3c021201e9b5dca]
Former-commit-id: bff89b867a3a0e45b3844a9109d88e6c068092a1

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -264,6 +264,7 @@
       <DependentUpon>20170327142247_MigrationReset.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\SearchHistoryDbModelSnapshot.cs" />
+    <Compile Include="Services\InAppToastNotification.cs" />
     <Compile Include="Services\ContentDialogNotification.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
     <Compile Include="Settings\SettingsHelper.cs" />
