--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -351,55 +351,61 @@
     </AppxManifest>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Assets\SplashScreen.scale-100.png" />
-    <Content Include="Assets\SplashScreen.scale-200.png" />
-    <Content Include="Assets\SplashScreen.scale-400.png" />
-    <Content Include="Images\CopyToClipboard.scale-100.png" />
-    <Content Include="Images\CopyToClipboard.scale-200.png" />
-    <Content Include="Images\CopyToClipboard.scale-400.png" />
-    <Content Include="Images\EHWiki.scale-100.png" />
-    <Content Include="Images\EHWiki.scale-200.png" />
-    <Content Include="Images\EHWiki.scale-400.png" />
-    <Content Include="Images\EH.scale-100.png" />
-    <Content Include="Images\EH.scale-200.png" />
-    <Content Include="Images\EH.scale-400.png" />
-    <Content Include="Images\Dark\UserBackground.scale-100.png" />
-    <Content Include="Images\Dark\UserBackground.scale-200.png" />
-    <Content Include="Images\Dark\UserBackground.scale-400.png" />
-    <Content Include="Images\DefaultUser.scale-100.png" />
-    <Content Include="Images\DefaultUser.scale-200.png" />
-    <Content Include="Images\DefaultUser.scale-400.png" />
-    <Content Include="Assets\Medium.scale-100.png" />
-    <Content Include="Assets\Medium.scale-200.png" />
-    <Content Include="Assets\Medium.scale-400.png" />
-    <Content Include="Assets\Small.scale-100.png" />
-    <Content Include="Assets\Small.scale-200.png" />
-    <Content Include="Assets\Small.scale-400.png" />
-    <Content Include="Assets\Store.scale-100.png" />
-    <Content Include="Assets\Store.scale-200.png" />
-    <Content Include="Assets\Store.scale-400.png" />
-    <Content Include="Assets\TaskBar.scale-100.png" />
-    <Content Include="Assets\TaskBar.scale-200.png" />
-    <Content Include="Assets\TaskBar.scale-400.png" />
-    <Content Include="Assets\TaskBar.targetsize-256.png" />
-    <Content Include="Assets\TaskBar.targetsize-256_altform-unplated.png" />
-    <Content Include="Assets\Wide.scale-100.png" />
-    <Content Include="Assets\Wide.scale-200.png" />
-    <Content Include="Assets\Wide.scale-400.png" />
+    <Content Include="Assets\Application\SplashScreen.scale-100.png" />
+    <Content Include="Assets\Application\SplashScreen.scale-200.png" />
+    <Content Include="Assets\Application\SplashScreen.scale-400.png" />
+    <Content Include="Assets\Theme\Dark\ImageLoading.scale-100.png" />
+    <Content Include="Assets\Theme\Dark\ImageLoading.scale-200.png" />
+    <Content Include="Assets\Theme\Dark\ImageLoading.scale-400.png" />
+    <Content Include="Assets\Theme\Light\ImageLoading.scale-100.png" />
+    <Content Include="Assets\Theme\Light\ImageLoading.scale-200.png" />
+    <Content Include="Assets\Theme\Light\ImageLoading.scale-400.png" />
+    <Content Include="Assets\ShareTarget\CopyToClipboard.scale-100.png" />
+    <Content Include="Assets\ShareTarget\CopyToClipboard.scale-200.png" />
+    <Content Include="Assets\ShareTarget\CopyToClipboard.scale-400.png" />
+    <Content Include="Assets\About\EHWiki.scale-100.png" />
+    <Content Include="Assets\About\EHWiki.scale-200.png" />
+    <Content Include="Assets\About\EHWiki.scale-400.png" />
+    <Content Include="Assets\About\EH.scale-100.png" />
+    <Content Include="Assets\About\EH.scale-200.png" />
+    <Content Include="Assets\About\EH.scale-400.png" />
+    <Content Include="Assets\Theme\Dark\UserBackground.scale-100.png" />
+    <Content Include="Assets\Theme\Dark\UserBackground.scale-200.png" />
+    <Content Include="Assets\Theme\Dark\UserBackground.scale-400.png" />
+    <Content Include="Assets\DefaultUser.scale-100.png" />
+    <Content Include="Assets\DefaultUser.scale-200.png" />
+    <Content Include="Assets\DefaultUser.scale-400.png" />
+    <Content Include="Assets\Application\Medium.scale-100.png" />
+    <Content Include="Assets\Application\Medium.scale-200.png" />
+    <Content Include="Assets\Application\Medium.scale-400.png" />
+    <Content Include="Assets\Application\Small.scale-100.png" />
+    <Content Include="Assets\Application\Small.scale-200.png" />
+    <Content Include="Assets\Application\Small.scale-400.png" />
+    <Content Include="Assets\Application\Store.scale-100.png" />
+    <Content Include="Assets\Application\Store.scale-200.png" />
+    <Content Include="Assets\Application\Store.scale-400.png" />
+    <Content Include="Assets\Application\TaskBar.scale-100.png" />
+    <Content Include="Assets\Application\TaskBar.scale-200.png" />
+    <Content Include="Assets\Application\TaskBar.scale-400.png" />
+    <Content Include="Assets\Application\TaskBar.targetsize-256.png" />
+    <Content Include="Assets\Application\TaskBar.targetsize-256_altform-unplated.png" />
+    <Content Include="Assets\Application\Wide.scale-100.png" />
+    <Content Include="Assets\Application\Wide.scale-200.png" />
+    <Content Include="Assets\Application\Wide.scale-400.png" />
     <PRIResource Include="Strings\zh-hans\Resources.resJson" />
     <PRIResource Include="Strings\en\Resources.resJson" />
     <PRIResource Include="Strings\en\Settings.resJson" />
     <PRIResource Include="Strings\en\Exceptions.resJson" />
     <None Include="Strings\Strings.resgenconfig" />
-    <Content Include="Images\Light\UserBackground.scale-100.png" />
-    <Content Include="Images\Light\UserBackground.scale-200.png" />
-    <Content Include="Images\Light\UserBackground.scale-400.png" />
-    <Content Include="Images\Settings.scale-100.png" />
-    <Content Include="Images\Settings.scale-200.png" />
-    <Content Include="Images\Settings.scale-400.png" />
-    <Content Include="Images\MicrosoftEdge.scale-200.png" />
-    <Content Include="Images\MicrosoftEdge.scale-400.png" />
-    <Content Include="Images\MicrosoftEdge.scale-100.png" />
+    <Content Include="Assets\Theme\Light\UserBackground.scale-100.png" />
+    <Content Include="Assets\Theme\Light\UserBackground.scale-200.png" />
+    <Content Include="Assets\Theme\Light\UserBackground.scale-400.png" />
+    <Content Include="Assets\ShareTarget\Settings.scale-100.png" />
+    <Content Include="Assets\ShareTarget\Settings.scale-200.png" />
+    <Content Include="Assets\ShareTarget\Settings.scale-400.png" />
+    <Content Include="Assets\ShareTarget\MicrosoftEdge.scale-200.png" />
+    <Content Include="Assets\ShareTarget\MicrosoftEdge.scale-400.png" />
+    <Content Include="Assets\ShareTarget\MicrosoftEdge.scale-100.png" />
     <Content Include="Properties\Default.rd.xml">
       <SubType>Designer</SubType>
     </Content>
