--- a/ExDawnOfDayTask/ExDawnOfDayTask.csproj
+++ b/ExDawnOfDayTask/ExDawnOfDayTask.csproj
@@ -108,6 +108,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strings.g.cs" />
     <Compile Include="Task.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -117,12 +118,28 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.Notifications">
       <Version>2.2.0</Version>
     </PackageReference>
+    <PackageReference Include="Opportunity.Helpers.Universal">
+      <Version>1.3.9</Version>
+    </PackageReference>
+    <PackageReference Include="Opportunity.ResourceGenerator">
+      <Version>1.3.8</Version>
+    </PackageReference>
+    <PackageReference Include="System.ValueTuple">
+      <Version>4.4.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExClient\ExClient.csproj">
       <Project>{8875a248-ce2e-454b-9090-62ae609d7644}</Project>
       <Name>ExClient</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <None Include="Strings.resgenconfig" />
+    <PRIResource Include="Strings\zh-hant\Resources.resjson" />
+    <PRIResource Include="Strings\zh-hans\Resources.resjson" />
+    <PRIResource Include="Strings\en\Resources.resjson" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
