--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Api\Rating.cs" />
     <Compile Include="Api\Tagging.cs" />
     <Compile Include="Api\VoteState.cs" />
+    <Compile Include="Forums\Topic.cs" />
     <Compile Include="Hentaiverse\EventArgs.cs" />
     <Compile Include="Services\LanguageModifier.cs" />
     <Compile Include="Services\LanguageName.cs" />
@@ -232,7 +233,7 @@
     <Compile Include="Status\TaggingStatistics.cs" />
     <Compile Include="Tagging\TagState.cs" />
     <Compile Include="Status\TopList.cs" />
-    <Compile Include="Status\UserInfo.cs" />
+    <Compile Include="Forums\UserInfo.cs" />
     <Compile Include="Status\UserStatus.cs" />
     <Content Include="Properties\ExClient.rd.xml" />
     <PRIResource Include="Strings\en\Namespace.resjson" />
@@ -253,7 +254,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
-      <Version>1.8.1</Version>
+      <Version>1.8.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>1.1.5</Version>
@@ -268,10 +269,10 @@
       <Version>11.0.2</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Helpers.Universal">
-      <Version>1.3.10</Version>
+      <Version>1.3.11</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.MvvmUniverse">
-      <Version>2.6.8</Version>
+      <Version>2.6.9</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.ResourceGenerator">
       <Version>1.3.8</Version>
