--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -291,6 +291,9 @@
       <DependentUpon>AboutControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="ViewModels\ToplistVM.cs" />
+    <Compile Include="Views\RenameGalleryDialog.xaml.cs">
+      <DependentUpon>RenameGalleryDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\AddToFavoritesDialog.xaml.cs">
       <DependentUpon>AddToFavoritesDialog.xaml</DependentUpon>
     </Compile>
@@ -526,6 +529,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Views\RenameGalleryDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="Views\AddToFavoritesDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -669,7 +676,7 @@
       <Version>1.3.11</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.MvvmUniverse">
-      <Version>2.6.10</Version>
+      <Version>2.6.11</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.ResourceGenerator">
       <Version>1.3.8</Version>
