new history db; tap to flip
Former-commit-id: 5e587ac052e46b15e077b33ef229226fb6e969e6 [formerly a137f861f0abc02923df3d3fdb40db34fa70cddf]
Former-commit-id: 65ccf91277f1c5847b05355e9d3ec6031b78a353

--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -257,17 +257,17 @@
     </Compile>
     <Compile Include="Controls\SplitViewButton.cs" />
     <Compile Include="Controls\SplitViewTab.cs" />
-    <Compile Include="Database\SearchHistoryDb.cs" />
+    <Compile Include="Database\HistoryDb.cs" />
     <Compile Include="Helpers\ExceptionHandler.cs" />
     <Compile Include="Helpers\HtmlHelper.cs" />
     <Compile Include="Helpers\ShareHandler.cs" />
     <Compile Include="Helpers\TagExtension.cs" />
     <Compile Include="Helpers\ViewHelper.cs" />
-    <Compile Include="Migrations\20170327142247_MigrationReset.cs" />
-    <Compile Include="Migrations\20170327142247_MigrationReset.designer.cs">
-      <DependentUpon>20170327142247_MigrationReset.cs</DependentUpon>
+    <Compile Include="Migrations\20180807021725_History.cs" />
+    <Compile Include="Migrations\20180807021725_History.designer.cs">
+      <DependentUpon>20180807021725_History.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\SearchHistoryDbModelSnapshot.cs" />
+    <Compile Include="Migrations\HistoryDbModelSnapshot.cs" />
     <Compile Include="Services\InAppToastNotification.cs" />
     <Compile Include="Services\ContentDialogNotification.cs" />
     <Compile Include="Settings\SettingCollection.cs" />
