--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -241,7 +241,6 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Controls\DataTemplateSelector.cs" />
     <Compile Include="Controls\HighlightTextBlock.cs" />
     <Compile Include="Controls\HtmlTextBlock.cs" />
     <Compile Include="Controls\CategorySelector.xaml.cs">
@@ -685,9 +684,6 @@
     <PackageReference Include="Microsoft.Toolkit.Uwp.UI.Controls">
       <Version>3.0.0</Version>
     </PackageReference>
-    <PackageReference Include="Opportunity.Converters">
-      <Version>2.2.10</Version>
-    </PackageReference>
     <PackageReference Include="Opportunity.Helpers.Universal">
       <Version>1.3.15</Version>
     </PackageReference>
@@ -696,6 +692,12 @@
     </PackageReference>
     <PackageReference Include="Opportunity.ResourceGenerator">
       <Version>1.3.10</Version>
+    </PackageReference>
+    <PackageReference Include="Opportunity.UWP.Controls">
+      <Version>1.0.1</Version>
+    </PackageReference>
+    <PackageReference Include="Opportunity.UWP.Converters">
+      <Version>1.0.0</Version>
     </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
