--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -657,10 +657,12 @@
       <Version>1.9.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
-      <Version>1.1.5</Version>
+      <Version>1.1.6</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools">
-      <Version>1.1.5</Version>
+      <Version>1.1.6</Version>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
       <Version>6.1.7</Version>
@@ -669,19 +671,19 @@
       <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Helpers.Universal">
-      <Version>1.3.15</Version>
+      <Version>1.3.16</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.MvvmUniverse">
-      <Version>2.7.1</Version>
+      <Version>2.7.2</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.ResourceGenerator">
-      <Version>1.3.10</Version>
+      <Version>1.4.0</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.UWP.Controls">
       <Version>1.0.3</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.UWP.Converters">
-      <Version>1.0.0</Version>
+      <Version>1.0.1</Version>
     </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
