--- a/BannerProvider/BannerProvider.csproj
+++ b/BannerProvider/BannerProvider.csproj
@@ -134,6 +134,9 @@
     <PackageReference Include="Opportunity.Helpers.Universal">
       <Version>1.3.19</Version>
     </PackageReference>
+    <PackageReference Include="System.Memory">
+      <Version>4.5.1</Version>
+    </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
     </PackageReference>
