--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -285,6 +285,9 @@
     <PackageReference Include="Opportunity.ResourceGenerator">
       <Version>1.4.0</Version>
     </PackageReference>
+    <PackageReference Include="System.Memory">
+      <Version>4.5.1</Version>
+    </PackageReference>
     <PackageReference Include="System.ValueTuple">
       <Version>4.5.0</Version>
     </PackageReference>
