--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -215,7 +215,7 @@
     <Compile Include="Status\TopList.cs" />
     <Compile Include="Forums\UserInfo.cs" />
     <Compile Include="Status\UserStatus.cs" />
-    <Content Include="Properties\ExClient.rd.xml" />
+    <EmbeddedResource Include="Properties\ExClient.rd.xml" />
     <PRIResource Include="Strings\zh-hant\ExpungeReason.resjson" />
     <PRIResource Include="Strings\zh-hans\ExpungeReason.resjson" />
     <PRIResource Include="Strings\en\Namespace.resjson" />
@@ -237,7 +237,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
-      <Version>1.8.10</Version>
+      <Version>1.8.11</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>1.1.6</Version>
