optimize thumb & save
Former-commit-id: 37e98492db69856b4e737e1b0dc0dca92a474c0e [formerly fa74f691f3de1fc683b7597f4a45cc983d6a4525]
Former-commit-id: fecd3214482cf855ecc5082431855019d48eaacc

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -114,6 +114,7 @@
     <Compile Include="Api\Tagging.cs" />
     <Compile Include="Api\VoteState.cs" />
     <Compile Include="Forums\Topic.cs" />
+    <Compile Include="Storage.cs" />
     <Compile Include="Hentaiverse\EventArgs.cs" />
     <Compile Include="Internal\ThumbClient.cs" />
     <Compile Include="Services\ExpungeInfo.cs" />
