--- a/EhTagTranslatorClient/EhTagTranslatorClient.csproj
+++ b/EhTagTranslatorClient/EhTagTranslatorClient.csproj
@@ -93,18 +93,9 @@
   <ItemGroup>
     <Compile Include="Client.cs" />
     <Compile Include="DataBase.cs" />
-    <Compile Include="MarkdownText.cs" />
-    <Compile Include="Migrations\20170326081343_Migration1.cs" />
-    <Compile Include="Migrations\20170326081343_Migration1.designer.cs">
-      <DependentUpon>20170326081343_Migration1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\20170326090536_Migration2.cs" />
-    <Compile Include="Migrations\20170326090536_Migration2.designer.cs">
-      <DependentUpon>20170326090536_Migration2.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\20170915083036_ExternalLinks.cs" />
-    <Compile Include="Migrations\20170915083036_ExternalLinks.designer.cs">
-      <DependentUpon>20170915083036_ExternalLinks.cs</DependentUpon>
+    <Compile Include="Migrations\20190218125824_NewDb.cs" />
+    <Compile Include="Migrations\20190218125824_NewDb.designer.cs">
+      <DependentUpon>20190218125824_NewDb.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\TranslateDbModelSnapshot.cs" />
     <Compile Include="Model\TranslateDb.cs" />
@@ -119,9 +110,6 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack">
-      <Version>1.9.0</Version>
-    </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>1.1.6</Version>
     </PackageReference>
