use showpage api
Former-commit-id: fb049708882b3a688d84c94aa26c43d271c28981 [formerly fe6f6c325e805c86c677ca306f45ffd3a14e8085]
Former-commit-id: 35be1490f2ee9905e364f0e7a44da661606f182f

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -110,6 +110,7 @@
     <PRIResource Include="Strings\zh-hans\Namespace.resjson" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Api\ImageData.cs" />
     <Compile Include="Api\Rating.cs" />
     <Compile Include="Api\Tagging.cs" />
     <Compile Include="Api\VoteState.cs" />
