--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -115,6 +115,7 @@
     <Compile Include="Api\Tagging.cs" />
     <Compile Include="Api\VoteState.cs" />
     <Compile Include="Config.cs" />
+    <Compile Include="EToken.cs" />
     <Compile Include="Forums\Topic.cs" />
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Helpers\ThumbHelper.cs" />
@@ -160,7 +161,6 @@
     <Compile Include="Api\ApiRequest.cs" />
     <Compile Include="HostType.cs" />
     <Compile Include="Galleries\ImageLoadingState.cs" />
-    <Compile Include="Helpers\TokenExtension.cs" />
     <Compile Include="Services\Language.cs" />
     <Compile Include="Launch\FavoritesSearchHandler.cs" />
     <Compile Include="Launch\GalleryHandler.cs" />
@@ -241,7 +241,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
-      <Version>1.9.1</Version>
+      <Version>1.11.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite">
       <Version>1.1.6</Version>
@@ -252,7 +252,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.2.2</Version>
+      <Version>6.2.8</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>12.0.1</Version>
