fix page parsing

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Helpers\StorageHelper.cs" />
     <Compile Include="Helpers\ThumbHelper.cs" />
     <Compile Include="Hentaiverse\EventArgs.cs" />
+    <Compile Include="Internal\GalleryListParser.cs" />
     <Compile Include="Internal\ThumbClient.cs" />
     <Compile Include="Services\ExpungeInfo.cs" />
     <Compile Include="Services\ExpungeReason.cs" />
