popular uri launch
Former-commit-id: 4a4f6db2c56d81b750127f8c507a59e88e37e868 [formerly fe64486cbf4e2113b9da4b5d89182336b2a09450]
Former-commit-id: cb9ffa2352ac96cbaa9765bb62bc0bdf015fc6e1

--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Hentaiverse\EventArgs.cs" />
     <Compile Include="Internal\GalleryListParser.cs" />
     <Compile Include="Internal\ThumbClient.cs" />
+    <Compile Include="Launch\PopularHandler.cs" />
     <Compile Include="Services\ExpungeInfo.cs" />
     <Compile Include="Services\ExpungeReason.cs" />
     <Compile Include="Services\ExpungeRecord.cs" />
