--- a/ExViewer/ExViewer.csproj
+++ b/ExViewer/ExViewer.csproj
@@ -204,6 +204,9 @@
     <PRIResource Include="Strings\zh-hans\Settings.resJson" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controls\AdvancedSearchViewer.xaml.cs">
+      <DependentUpon>AdvancedSearchViewer.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\CommentViewer.xaml.cs">
       <DependentUpon>CommentViewer.xaml</DependentUpon>
     </Compile>
@@ -415,6 +418,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Controls\AdvancedSearchViewer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\CategorySelector.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -650,7 +657,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack">
-      <Version>1.11.1</Version>
+      <Version>1.11.2</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.AppCenter.Analytics">
       <Version>1.14.0</Version>
@@ -673,7 +680,7 @@
       <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.UI.Xaml">
-      <Version>2.0.181018004</Version>
+      <Version>2.1.190405004</Version>
     </PackageReference>
     <PackageReference Include="Opportunity.Helpers.Universal">
       <Version>1.3.19</Version>
