Import Korean translation
Former-commit-id: e1c8047d99d0eed3ea30abff9610579c2e3c78f5 [formerly 9335ac25cf809da19fa4a74b77ea3be0a0c06916]
Former-commit-id: d3d0e4dd5e00b6ab3a85c5e82c6b9298b07abaab

--- a/ApplicationDataManager/ApplicationDataManager.csproj
+++ b/ApplicationDataManager/ApplicationDataManager.csproj
@@ -93,6 +93,7 @@
   </PropertyGroup>
   <ItemGroup>
     <!-- A reference to the entire .Net Framework and Windows SDK are automatically included -->
+    <PRIResource Include="Strings\ko\Resources.resJson" />
     <None Include="Strings\Strings.resgenconfig" />
     <PRIResource Include="Strings\zh-hant\Resources.resJson" />
     <PRIResource Include="Strings\zh-hans\Resources.resJson" />
