--- a/ExClient/ExClient.csproj
+++ b/ExClient/ExClient.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Internal\GalleryListParser.cs" />
     <Compile Include="Internal\ThumbClient.cs" />
     <Compile Include="Launch\PopularHandler.cs" />
+    <Compile Include="Search\WatchingSearchResult.cs" />
     <Compile Include="Services\ExpungeInfo.cs" />
     <Compile Include="Services\ExpungeReason.cs" />
     <Compile Include="Services\ExpungeRecord.cs" />
